{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 20,
  "lineage": "df2ffdbf-4d18-6928-b546-632447e82388",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:433427046236:instance/i-0dc744816904df520",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc744816904df520",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0b71a88f63033f3c8"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b71a88f63033f3c8",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a76863480f9e1c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072a3c9834f99e8ff",
            "tags": {
              "Name": "Prod_web_server"
            },
            "tags_all": {
              "Name": "Prod_web_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-084f24dcad29a86e1"
            ]
          },
          "dependencies": [
            "aws_network_interface.provisioned_resources",
            "aws_security_group.allow_web_traffic",
            "aws_subnet.secondary_subnet",
            "aws_vpc.my_prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433427046236:internet-gateway/igw-03777e472e2d63e6b",
            "id": "igw-03777e472e2d63e6b",
            "owner_id": "433427046236",
            "tags": {
              "Name": "production_gateway"
            },
            "tags_all": {
              "Name": "production_gateway"
            },
            "vpc_id": "vpc-0224f1561d9a983b2"
          },
          "dependencies": [
            "aws_vpc.my_prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "provisioned_resources",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433427046236:network-interface/eni-0b71a88f63033f3c8",
            "attachment": [
              {
                "attachment_id": "eni-attach-074b4a683888c213d",
                "device_index": 0,
                "instance": "i-0dc744816904df520"
              }
            ],
            "id": "eni-0b71a88f63033f3c8",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:d0:d7:ef:c9:6d",
            "owner_id": "433427046236",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-084f24dcad29a86e1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072a3c9834f99e8ff"
          },
          "dependencies": [
            "aws_security_group.allow_web_traffic",
            "aws_subnet.secondary_subnet",
            "aws_vpc.my_prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433427046236:route-table/rtb-01a4974445aea2e99",
            "id": "rtb-01a4974445aea2e99",
            "owner_id": "433427046236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03777e472e2d63e6b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production_routes"
            },
            "tags_all": {
              "Name": "production_routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0224f1561d9a983b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod_gateway",
            "aws_vpc.my_prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0119e8505e615a498",
            "route_table_id": "rtb-01a4974445aea2e99",
            "subnet_id": "subnet-072a3c9834f99e8ff"
          },
          "dependencies": [
            "aws_internet_gateway.prod_gateway",
            "aws_route_table.prod_route_table",
            "aws_subnet.secondary_subnet",
            "aws_vpc.my_prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433427046236:security-group/sg-084f24dcad29a86e1",
            "description": "Allow TLS inbound traffic for prod",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084f24dcad29a86e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "433427046236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_web_traffic"
            },
            "tags_all": {
              "Name": "allow_all_web_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0224f1561d9a983b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433427046236:subnet/subnet-0a49c3fd150ab63ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a49c3fd150ab63ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433427046236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production_subnet"
            },
            "tags_all": {
              "Name": "production_subnet"
            },
            "vpc_id": "vpc-0224f1561d9a983b2"
          },
          "dependencies": [
            "aws_vpc.my_prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433427046236:subnet/subnet-072a3c9834f99e8ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072a3c9834f99e8ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433427046236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_secondary_subnet"
            },
            "tags_all": {
              "Name": "prod_secondary_subnet"
            },
            "vpc_id": "vpc-0224f1561d9a983b2"
          },
          "dependencies": [
            "aws_vpc.my_prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433427046236:vpc/vpc-0224f1561d9a983b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0816ec38690d1ce8d",
            "default_route_table_id": "rtb-0808d3ad0937dc6dd",
            "default_security_group_id": "sg-0421a75d5bb9ef5e5",
            "dhcp_options_id": "dopt-0576125b5fd0a5fe3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0224f1561d9a983b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0808d3ad0937dc6dd",
            "owner_id": "433427046236",
            "tags": {
              "Name": "production_vpc"
            },
            "tags_all": {
              "Name": "production_vpc"
            }
          }
        }
      ]
    }
  ]
}